# triplifier

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  convertData.sh  ontology.owl  output.ttl  pyproject.toml  requirements.txt  run.sh  test.py  test.sh  test_integration_triplifier.py  test_ontology.owl  test_output.ttl
.github/scripts/: bump_version_number.py
.github/workflows/: build.yaml  publish.yml
containerTest/: setupGraph.bat  setupdb.bat  setupdb.sh  test.bat  test.sh  testGraph.bat
containerTest/data/: 01_execute.sql
javaTool/: instances.ttl  ontology.owl  pom.xml
javaTool/src/main/java/nl/um/cds/triplifier/: DatabaseInspector.java  ForeignKeySpecification.java  MainApp.java
javaTool/src/main/java/nl/um/cds/triplifier/rdf/: AnnotationFactory.java  DataFactory.java  OntologyFactory.java  RdfFactory.java  StatementCollector.java
javaTool/src/main/resources/: log4j.properties
javaTool/src/test/java/nl/um/cds/triplifier/rdf/: RdfFactoryHostnameTest.java
pyScripts/: enrich.py  read_literal_properties.sparql  reform_triples.py  uploadData.py  working_query_domain_range.sparql
python/: requirements.txt  setup.py
python/triplifier/lib/: DatabaseInspector.py  OntologyService.py
python/triplifier/tests/: test_inspect.py
pythonTool/: __init__.py  db_inspector.py  foreign_key_specification.py  main_app.py
pythonTool/rdf/: __init__.py  annotation_factory.py  data_factory.py  ontology_factory.py  rdf_factory.py  statement_collector.py
pythonTool/rdf/ontology/: __init__.py  dbo.py
(+1 files in other folders)
