[build-system]
requires = [ "setuptools>=61", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "triplifier"
version = "2.1.0"
description = "Python port of the Triplifier tool."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "rdflib>=6.0.0", "PyYAML>=5.3", "SQLAlchemy>=1.4", "psycopg2-binary>=2.8",]
[[project.authors]]
name = "Johan van Soest"

[project.license]
file = "LICENSE"

[project.scripts]
triplifier = "pythonTool.main_app:main"

[tool.setuptools.packages.find]
include = [ "pythonTool*",]
