[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triplifier"
version = "2.0.3"
description = "Python port of the Triplifier tool."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [ {name = "Johan van Soest"} ]
dependencies = [
    "rdflib>=6.0.0",
    "PyYAML>=5.3",
    "SQLAlchemy>=1.4",
    "psycopg2-binary>=2.8"
]

[project.scripts]
triplifier = "pythonTool.main_app:main"

[tool.setuptools.packages.find]
include = ["pythonTool*"]
